# flightmare_simulator

./: CMakeLists.txt  README.md  package.xml
Ubuntu_2204_libs/: libzmqpp-dev_4.1.2-0ubuntu2_amd64.deb  libzmqpp4_4.1.2-0ubuntu2_amd64.deb
config/: aprilTag_config.yaml  aprilTag_config_copy_detect.yaml  aprilTag_config_detect.yaml  aprilTag_config_perch.yaml  scene1.yaml
include/quadrotor_simulator/: Quadrotor.h
launch/: flightmare_sim (copy).launch  flightmare_sim.launch  sim.launch
src/: quadrotor_simulator_base.hpp  quadrotor_simulator_so3.cpp
