<package format="2">
  <name>flightmare_simulator</name>
  <version>1.0.0</version>
  <description>flightmare_simulator</description>
  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>
  <maintainer email="michael.f.watterson@gmail.com">Michael Watterson</maintainer>

  <license>BSD</license>

  <author>Kartik Mohta</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>catkin_simple</depend>

  <depend>roscpp</depend>
  <depend>quadrotor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>flightlib</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

</package>
